Fix numerous bugs, add move history recording